Updated homepage and styling.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,65 @@
     <title>Personal Site</title>
 </head>
 <body>
-    
+    <nav>
+        <div id="logo-img">
+            <a href="#">
+                <img src="Images/logo.png" alt="DigitalNavyGuy logo">
+            </a>
+            <h1>John Fuller</h1>
+        </div>
+        <ul>
+            <li>
+                <a class="active" href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Portfolio</a>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
+        <div class="container">
+            <section>
+                <h2 class="section-heading">Navy Vet, Freelance Web Designer, <br>& Aspiring Software Engineer</h2>
+                <div class="intro">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae assumenda velit, provident incidunt corporis at cupiditate obcaecati corrupti temporibus. Consectetur praesentium ullam eius similique suscipit obcaecati, maiores quibusdam sapiente cumque.</p>
+                    <img src="Images/Me.jpg" alt="Picture of me.">
+                </div>  
+            
+                <div class="quote">
+                    <p><em>"Winners are not people who never fail, but people who never quit."
+                        <br>
+                        <cite> - Edwin Louis Cole</cite></em>
+                    </p>
+                </div>
+            </section>
+        </div>
+    </main>
+   
+    <footer>
+        <div id="social-media">
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
