Added portfolio page, updated links on index.html and about.html

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div id="logo-img">
-            <a href="#">
+            <a href="http://127.0.0.1:5500/index.html">
                 <img src="Images/logo.png" alt="DigitalNavyGuy logo">
             </a>
             <h1>John Fuller</h1>
@@ -60,17 +60,17 @@
         <div id="social-media">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="https://www.facebook.com/">
                         <i class="fab fa-facebook-square"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/john-fuller-201a03113/">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/DigitalNavyGuy">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
