--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
         </div>
         <ul>
             <li>
-                <a class="active" href="http://127.0.0.1:5500/index.html">Home</a>
+                <a href="http://127.0.0.1:5500/index.html">Home</a>
             </li>
             <li>
                 <a href="http://127.0.0.1:5500/about.html">About</a>
             </li>
             <li>
-                <a href="http://127.0.0.1:5500/portfolio.html">Portfolio</a>
+                <a class="active" href="http://127.0.0.1:5500/portfolio.html">Portfolio</a>
             </li>
         </ul>
     </nav>
@@ -32,19 +32,27 @@
     <main>
         <div class="container">
             <section>
-                <h2 class="section-heading">Navy Vet, Freelance Web Designer, <br>& Aspiring Software Engineer</h2>
-                <div class="intro">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae assumenda velit, provident incidunt corporis at cupiditate obcaecati corrupti temporibus. Consectetur praesentium ullam eius similique suscipit obcaecati, maiores quibusdam sapiente cumque.</p>
-                    <img src="Images/Me.jpg" alt="Picture of me.">
-                </div>  
-            
-                <div class="quote">
-                    <p><em>"Winners are not people who never fail, but people who never quit."
-                        <br>
-                        <cite> - Edwin Louis Cole</cite></em>
-                    </p>
+                <h1>These are some of the things I like to do when I'm not working, or practicing code.</h1> 
+                <hr>
+                <div id="section-1">
+                    <h2>Beauty By Lolita</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla sequi soluta, vero eveniet accusantium quaerat eligendi autem, sed nam temporibus pariatur voluptates! Beatae quasi incidunt ipsam voluptatum. Explicabo, modi dolore.</p>
+                    <img src="Images/Grilling.jpg" alt="Chicken on a grill">
                 </div>
-            </section>
+                <hr>
+                <div id="section-2">
+                    <h2>The K Luxury Experience</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla sequi soluta, vero eveniet accusantium quaerat eligendi autem, sed nam temporibus pariatur voluptates! Beatae quasi incidunt ipsam voluptatum. Explicabo, modi dolore.</p>
+                    <img src="Images/Cool Grey Jordan 11 Sneakers.jpg" alt="activity1">
+                </div>
+                <hr>
+                <div id="section-3">
+                    <h2>Rehab Well Mind, Body & Soul</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla sequi soluta, vero eveniet accusantium quaerat eligendi autem, sed nam temporibus pariatur voluptates! Beatae quasi incidunt ipsam voluptatum. Explicabo, modi dolore.</p>
+                    <img src="Images/Belle.jpeg" alt="activity1">
+                </div>
+                <hr>
+            </section>         
         </div>
     </main>
    
