--- a/portfolio.html
+++ b/portfolio.html
@@ -32,24 +32,24 @@
     <main>
         <div class="container">
             <section>
-                <h1>These are some of the things I like to do when I'm not working, or practicing code.</h1> 
+                <h1>These are a couple of web designs I've created following tutorials and learning how to code.</h1> 
                 <hr>
                 <div id="section-1">
-                    <h2>Beauty By Lolita</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla sequi soluta, vero eveniet accusantium quaerat eligendi autem, sed nam temporibus pariatur voluptates! Beatae quasi incidunt ipsam voluptatum. Explicabo, modi dolore.</p>
-                    <img src="Images/Grilling.jpg" alt="Chicken on a grill">
+                    <h2>Fictional University</h2>
+                    <p>This is a custom Wordpress theme that I am currently making from a tutorial. The theme includes custom post types.</p>
+                    <img src="Images/Fictional University.jpeg" alt="screenshot of a website">
                 </div>
                 <hr>
                 <div id="section-2">
                     <h2>The K Luxury Experience</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla sequi soluta, vero eveniet accusantium quaerat eligendi autem, sed nam temporibus pariatur voluptates! Beatae quasi incidunt ipsam voluptatum. Explicabo, modi dolore.</p>
-                    <img src="Images/Cool Grey Jordan 11 Sneakers.jpg" alt="activity1">
+                    <p>This is a digital business card for a cousin. Complete with shareable QR code, link to her booking site, and some examples of her work.</p>
+                    <a href="https://thekluxuryexperience.com/business-card/"><img src="Images/TheKBridalExperience.jpeg" alt="screenshot of website"></a>
                 </div>
                 <hr>
                 <div id="section-3">
                     <h2>Rehab Well Mind, Body & Soul</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla sequi soluta, vero eveniet accusantium quaerat eligendi autem, sed nam temporibus pariatur voluptates! Beatae quasi incidunt ipsam voluptatum. Explicabo, modi dolore.</p>
-                    <img src="Images/Belle.jpeg" alt="activity1">
+                    <p>This is a website I designed from a template for my cousin's business. </p>
+                    <a href="https://rehabwellmbs.com/"><img src="Images/MBSRehabWell.jpeg" alt="screenshot a of website"></a>
                 </div>
                 <hr>
             </section>         
