--- a/contact.html
+++ b/contact.html
@@ -27,27 +27,36 @@
                 <a href="http://127.0.0.1:5500/portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a class="active" href="http://127.0.0.1:5500/contact.html">Contact</a>
+                <a class="active" href="http://127.0.0.1:5500/contact.html">Contact</a> 
             </li>
         </ul>
     </nav>
 
     <main>
-        <div class="form-container">
-            <form id="contact-form" action="#">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <br>
-                <br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <br>
-                <br>
-                <label for="message">Message:</label>
-                <textarea name="message" id="message" rows="5"></textarea>
-                <br>
-                <input type="submit" value="Submit">
-            </form>
+        <div class="container">
+            <div class="form-container">
+                <div class="box">
+                    <h3>Let's Get In Touch</h3>
+                    <div class="name">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="Name" id="name">
+                    </div>
+                    <div class="email">
+                        <i class="fas fa-envelope"></i>
+                        <input type="text" placeholder="Email" id="email">
+                    </div>
+                    <div class="message-box">
+                        <textarea id="msg" cols="30" rows="10" placeholder="Message"></textarea>
+                    </div>
+                    <div class="button">
+                        <button id="send">Send</button>
+                    </div>
+                    <div class="message">
+                        <div class="success" id="success">Message Sent Successfully!</div>
+                        <div class="danger" id="danger">Fields Cannot Be Left Empty!</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
    
