--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,70 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/de008441f7.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,200;0,8..144,300;0,8..144,400;0,8..144,500;0,8..144,600;0,8..144,700;1,8..144,100;1,8..144,200;1,8..144,300;1,8..144,400;1,8..144,500;1,8..144,600;1,8..144,700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Personal Site</title>
 </head>
 <body>
-    <nav>
-        <div id="logo-img">
-            <a href="http://127.0.0.1:5500/index.html">
-                <img src="Images/logo.png" alt="DigitalNavyGuy logo">
-            </a>
-            <h1>John Fuller</h1>
+    <header>
+        <div class="container">
+            <nav class="navbar">
+                <div class="brand">
+                    <a href="index.html" class="logo">
+                    <img id="logo" src="img/logo.png" alt="">
+                </a>
+                <p class="name">John Fuller</p>
+                </div>
+                <ul class="nav-menu">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <ul>
-            <li>
-                <a class="active" href="http://127.0.0.1:5500/index.html">Home</a>
-            </li>
-            <li>
-                <a href="http://127.0.0.1:5500/about.html">About</a>
-            </li>
-            <li>
-                <a href="http://127.0.0.1:5500/portfolio.html">Portfolio</a>
-            </li>
-        </ul>
-    </nav>
+    </header>
 
     <main>
-        <div class="container">
-            <section>
-                <h2 class="section-heading">Navy Vet, Freelance Web Designer, <br>& Aspiring Software Engineer</h2>
-                <div class="intro">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae assumenda velit, provident incidunt corporis at cupiditate obcaecati corrupti temporibus. Consectetur praesentium ullam eius similique suscipit obcaecati, maiores quibusdam sapiente cumque.</p>
-                    <img src="Images/Me.jpg" alt="Picture of me.">
-                </div>  
-            
-                <div class="quote">
-                    <p><em>"Winners are not people who never fail, but people who never quit."
-                        <br>
-                        <cite> - Edwin Louis Cole</cite></em>
-                    </p>
-                </div>
-            </section>
+        <div class="main-section">
+            <div class="container1">
+                <h1>Navy Vet, Freelance Web Developer &<br>  Aspiring Software Engineer</h1>
+                <p>Retired Navy Electronics Technician, and dedicated team player looking to dive into the tech world and become a software engineer.</p>
+            </div>
+            <div class="container2">
+                <img class="image" src="img/Me.jpg" alt="">
+                <br>
+                <br>
+                <cite>"Winners are not people who never fail, but people who never quit."</cite>
+                <br>
+                <p> - Edwin Louis Cole</p>
+            </div>    
         </div>
-    </main>
-   
+    </main> 
+
     <footer>
-        <div id="social-media">
-            <ul>
-                <li>
-                    <a href="https://www.facebook.com/">
-                        <i class="fab fa-facebook-square"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/john-fuller-201a03113/">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/DigitalNavyGuy">
-                        <i class="fab fa-github"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/john-fuller-201a03113/"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+            <li>
+                <a href="https://github.com/DigitalNavyGuy"><i class="fab fa-github-square"></i></a>
+            </li>
+        </ul>
     </footer>
+
 </body>
 </html>
