--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/de008441f7.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,200;0,8..144,300;0,8..144,400;0,8..144,500;0,8..144,600;0,8..144,700;1,8..144,100;1,8..144,200;1,8..144,300;1,8..144,400;1,8..144,500;1,8..144,600;1,8..144,700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -11,63 +10,59 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <nav class="navbar">
-                <div class="brand">
-                    <a href="index.html" class="logo">
-                    <img id="logo" src="img/logo.png" alt="">
-                    </a>
-                    <p class="name">John Fuller</p>
-                </div>
-                <ul class="nav-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="about-main-section">
-            <div class="container">
-                <section>
-                    <h1>These are some of the things I like to do when I'm not working, or practicing code.</h1> 
-                    <hr>
-                    <div id="section-1">
-                        <h2>Cooking & Grilling</h2>
-                        <p>I spent a lot of time in the kitchen with my mom when I was young. Her favorite taste tester! Well, that carried into adulthood and while I may not bake or cook often, I've got the skills to make it happen. But what I've really grown to LOVE is getting on a smoker and grill. There's something oddly satisfying about firing up the smoker for a late night or early morning burn!</p>
-                        <img src="Images/Grilling.jpg" alt="Chicken on a grill">
-                    </div>
-                    <hr>
-                    <div id="section-2">
-                        <h2>Collecting Kicks</h2>
-                        <p>BIG TIME Sneakerhead! I have a Jordan sneaker fetish that thankfully isn't as bad as most. While I like the style and different colorways that release, I'm not the "OMG, gotta buy the new pair" guy. I hae my favorites, and usually stick with them in their various new colorways. Also, my closet wouldn't be complete without at least 3 pairs of Timberland boots.</p>
-                        <img src="Images/Cool Grey Jordan 11 Sneakers.jpg" alt="activity1">
-                    </div>
-                    <hr>
-                    <div id="section-3">
-                        <h2>Working on my Truck</h2>
-                        <p>I've always like cars, trucks, and motorcycles, and had my share of each. But long gone are the days of doing motor swaps and rebuilds. This is my current pride and joy, Belle. Although I don't get to tinker with her the way I'd like to, she's still fun and nice to look at!</p>
-                        <img src="Images/Belle.jpeg" alt="activity1">
-                    </div>
-                    <hr>
-                </section>         
+        <nav class="site-nav grid">
+            <div class="brand">
+                <a href="index.html" class="logo">
+                <img id="logo" src="img/logo.png" alt="">
+                </a>
             </div>
-        </div>  
-    </main>
+            <h1>John Fuller</h1>
+            <ul class="nav-menu">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="about">
+        <h3>Things I Like To Do</h3>
+        <div class="about-section grid">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sint, alias numquam repellat eveniet tenetur? Vel adipisci distinctio a fuga iure sed ipsa illum quasi, ut molestias, nulla, ea deserunt.</p>
+            <div class="about-img">
+                <img class="about-img" src="img/Grilling.jpg" alt="">
+            </div>
+        </div>
+        <br>
+        <div class="about-section grid">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sint, alias numquam repellat eveniet tenetur? Vel adipisci distinctio a fuga iure sed ipsa illum quasi, ut molestias, nulla, ea deserunt.</p>
+            <div class="about-img">
+                <img class="about-img" src="img/Cool Grey Jordan 11 Sneakers.jpg" alt="">
+            </div>
+        </div>
+        <br>
+        <div class="about-section grid">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sint, alias numquam repellat eveniet tenetur? Vel adipisci distinctio a fuga iure sed ipsa illum quasi, ut molestias, nulla, ea deserunt.</p>
+            <div class="about-img">
+                <img class="about-img" src="img/Belle.jpeg" alt="">
+            </div>
+        </div>
+    </section>
     <footer>
-        <ul>
-            <li>
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/john-fuller-201a03113/"><i class="fab fa-linkedin-in"></i></a>
-            </li>
-            <li>
-                <a href="https://github.com/DigitalNavyGuy"><i class="fab fa-github-square"></i></a>
-            </li>
-        </ul>
+        <div class="grid">
+            <p class="follow-me">Follow me on:</p>
+            <ul class="social">
+                <li>
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/john-fuller-201a03113/"><i class="fab fa-linkedin-in"></i></a>
+                </li>
+                <li>
+                    <a href="https://github.com/DigitalNavyGuy"><i class="fab fa-github-square"></i></a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
