--- a/contact.html
+++ b/contact.html
@@ -1,82 +1,55 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/de008441f7.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,200;0,8..144,300;0,8..144,400;0,8..144,500;0,8..144,600;0,8..144,700;1,8..144,100;1,8..144,200;1,8..144,300;1,8..144,400;1,8..144,500;1,8..144,600;1,8..144,700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Personal Site</title>
 </head>
 <body>
-    <nav>
-        <div id="logo-img">
-            <a href="http://127.0.0.1:5500/index.html">
-                <img src="Images/logo.png" alt="DigitalNavyGuy logo">
-            </a>
-            <h1>John Fuller</h1>
-        </div>
-        <ul>
-            <li>
-                <a href="http://127.0.0.1:5500/index.html">Home</a>
-            </li>
-            <li>
-                <a href="http://127.0.0.1:5500/about.html">About</a>
-            </li>
-            <li>
-                <a href="http://127.0.0.1:5500/portfolio.html">Portfolio</a>
-            </li>
-            <li>
-                <a class="active" href="http://127.0.0.1:5500/contact.html">Contact</a> 
-            </li>
-        </ul>
-    </nav>
-
-    <main>
-        <div class="container">
-            <div class="form-container">
-                <div class="box">
-                    <h3>Let's Get In Touch</h3>
-                    <div class="name">
-                        <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Name" id="name">
-                    </div>
-                    <div class="email">
-                        <i class="fas fa-envelope"></i>
-                        <input type="text" placeholder="Email" id="email">
-                    </div>
-                    <div class="message-box">
-                        <textarea id="msg" cols="30" rows="10" placeholder="Message"></textarea>
-                    </div>
-                    <div class="button">
-                        <button id="send">Send</button>
-                    </div>
-                    <div class="message">
-                        <div class="success" id="success">Message Sent Successfully!</div>
-                        <div class="danger" id="danger">Fields Cannot Be Left Empty!</div>
-                    </div>
-                </div>
+    <header>
+        <nav class="site-nav grid">
+            <div class="brand">
+                <a href="index.html" class="logo">
+                <img id="logo" src="img/logo.png" alt="">
+                </a>
             </div>
-        </div>
-    </main>
-   
+            <h1>John Fuller</h1>
+            <ul class="nav-menu">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="contact">
+        <h3>Get in Touch</h3>
+        <p class="leading">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolorum cupiditate, dolorem nam consequuntur tempore nulla earum, voluptatem modi voluptates animi sequi illum a quis id quo. Assumenda, quae eaque.
+        </p>
+        <form action="">
+            <input type="text" placeholder="Name">
+            <input type="email" placeholder="Email">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="button">Send Message</button>
+        </form>
+    </section>
     <footer>
-        <div id="social-media">
-            <ul>
+        <div class="grid">
+            <p class="follow-me">Follow me on:</p>
+            <ul class="social">
                 <li>
-                    <a href="https://www.facebook.com/">
-                        <i class="fab fa-facebook-square"></i>
-                    </a>
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/john-fuller-201a03113/">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
+                    <a href="https://www.linkedin.com/in/john-fuller-201a03113/"><i class="fab fa-linkedin-in"></i></a>
                 </li>
                 <li>
-                    <a href="https://github.com/DigitalNavyGuy">
-                        <i class="fab fa-github"></i>
-                    </a>
+                    <a href="https://github.com/DigitalNavyGuy"><i class="fab fa-github-square"></i></a>
                 </li>
             </ul>
         </div>
