--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
             </div>
             <h1>John Fuller</h1>
             <ul class="nav-menu">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
