--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
             </div>
             <h1>John Fuller</h1>
             <ul class="nav-menu">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
